# looklike

./: .gitignore  README.md  db_structure.sql
nginx/: looklike.conf
src/backend/: .env.example  example.env  gunicorn_config.py  pyproject.toml  requirements.txt  runserver.py
src/backend/looklike/: __init__.py  authorizations.py  configs.py  configs_list.py  database.py  db_helper.py  exceptions.py  extensions.py  models.py  redis_client.py  routes_decorators.py  serializers.py  settings.py  utils.py
src/backend/looklike/blueprints/: characters_routes.py  clothes_routes.py  test_routes.py  users_routes.py
src/backend/tests/unit/: test_authorizations.py  test_utils.py
src/frontend/: package-lock.json  package.json
src/frontend/public/: global.css  index.html
src/frontend/src/: App.svelte  auth.js  form-validators.js  settings.js  utils.js
src/frontend/src/components/: CharactersCard.svelte  ClothesBox.svelte  Footer.svelte  Header copy.svelte  Header.svelte
src/frontend/src/routes/: FavoriteCharacters.svelte  Index.svelte  LogOut.svelte  Login.svelte  NotFound404.svelte  Oops.svelte  Register.svelte  Search.svelte  SearchResult.svelte
