[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["HolyDorus <marichevdenysmail@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
gunicorn = "^20.0.4"
psycopg2-binary = "^2.8.6"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
